--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   build:
-    name: Build and Upload Release Assets
+    name: Build and upload release assets
     runs-on: macos-latest
     strategy:
       matrix:
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set Up Go
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.25'
@@ -31,12 +31,12 @@ jobs:
           GOARCH: ${{ matrix.goarch }}
         run: go build -o bin/hopkey ./cmd/hopkey/main.go
 
-      - name: Archive Binary
+      - name: Create release asset
         run: |
           cd bin
           zip hopkey-${{ matrix.goarch }}.zip hopkey
 
-      - name: Upload Release Asset
+      - name: Upload release asset
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
